== etracer ==
2007-9-13 Andreas Tarandi <torandi@gmail.com>
   * src/race_select.h  src/event_select.cpp src/loop.cpp
     src/game_over.h src/game_type_select.cpp src/Makefile.in
     src/winsys.cpp src/game_over.cpp src/race_select.cpp src/loop.h
     src/player.cpp src/game_type_select.h
     src/main.cpp src/event_select.h
     data/translations/en_GB.tcl
     new files: src/highscore.cpp src/highscore.h
     Added highscore, plus a way for user to enter username.
	Some translation is needed. (See #highscore in data/translations/en_GB.tcl)
	
2007-9-1  Steven Bell <botsnlinux@gmail.com>
  * AUTHORS    

=== ppracer 0.3.1 ===

2005-02-28  Volker Stroebel <volker@planetpenguin.de>
	* src/data/translations
	updated translations

2005-02-27  Volker Stroebel <volker@planetpenguin.de>
	* src/ppgltk/audio/audio_data.cpp src/hier_util.cpp
	  src/phys_sim.cpp src/ppgltk/textarea.cpp
	  src/credis.cpp src/hud.cpp src/quadtree.cpp
	  src/race_select.cpp src/ppgltk/listbox.cpp
	  src/callbacks.cpp src/ppgltk/label.cpp
	fixed compilation with --enable-debug
	
	* configure.in
	fixed --disable-debug

2005-02-26  Volker Stroebel <volker@planetpenguin.de>
	* src/phys_sim.cpp src/quadtree.* src/string_util.cpp 
	  src/debug.h src/textures.cpp src/ppgltk/images/png_reader.cpp
	  src/ppgltk/model.cpp src/ppgltk/model_ac.cpp
	  src/ppgltk/font.cpp src/course_quad.cpp
	several code fixes from ArKay

2005-02-24  Volker Stroebel <volker@planetpenguin.de>
	* src/game_over.cpp
	fix max speed calculation	

2005-02-18  Volker Stroebel <volker@planetpenguin.de>
	* data/translations/*
	updated translations
	
	* contrib/palettes/*
	added gimp color palettes for the terrains
	
	* configure.in
	added --with-tcl-inc and --with-tcl-lib-name

2005-02-15  Volker Stroebel <volker@planetpenguin.de>
	* src/course_load.cpp
	made hud translateable

2005-02-11  Volker Stroebel <volker@planetpenguin.de>
	* src/videoconfig.*
	added videomode autodetection (only resolutions)
	
	* src/gameconfig.*